--- a/index.html
+++ b/index.html
@@ -1,90 +1,132 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+  <head>
+    <meta charset="utf-8">
+    <title>金光教姫路教会</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <img src="media/picture/金光教ロゴマーク.png" alt=""　width="65px" height="65px">
+        </div>
+
+        <div class="header-title">金光教姫路教会</div>
+        <div class="header-subtitle">〜Konkokyo church of Himeji〜</div>
+
       </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+
+
+
+    </header>
+
+<!-- Top　写真 -->
+
+    <div class="top-wrapper">
+      <div class="container">
+        <h1>祈る</h1>
+        <p>人を想い願うことは祈るということ</p>
+        <p>手をあわせて祈ることで必ず想いや願いは届く</p>
       </div>
     </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+
+<!-- 教会ってどんなとこ   -->
+    <div class="middle-wrapper">
+      <p class="heading">教会ってどんなところ？</p>
+      <div class="whattodos">
+        <div class="whattodo">
+          <div class="whattodo-picture">
+            <img src="media/picture/IMG_教会玄関.jpg" alt="" width="400px" height="300px">
+            <p>来るもの拒まず</p>
+          </div>
+          <p>どんな方でも参拝いただけます</p>
+          <p>心を落ちつけたい時，ひとりになりたい時</p>
+          <p>ゆっくり時間を過ごせます</p>
+        </div>
+        <div class="whattodo">
+          <div class="whattodo-picture">
+            <img src="media/picture/IMG_取次.jpg" alt="" width="400px" height="300px">
+            <p>話を聞きます</p>
+          </div>
+          <p>つらい時，悩んでいる時に話を聞きます</p>
+          <p>苦しんでいる人に助かって欲しい・・・</p>
+          <p>そのために覚悟を決めて座っている人がいます</p>
+        </div>
+        <div class="whattodo">
+          <div class="whattodo-picture">
+            <img src="media/picture/IMG_お広前.jpg" alt="" width="400px" height="300px">
+            <p>お願いする場所</p>
+          </div>
+          <p>ああしたい。こうしたい</p>
+          <p>その願いが次に生きる希望になります</p>
+          <p>自分がどうしたら分からない時</p>
+          <p>進む道を一緒に考えます</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h6>Learn Where to Get Started!</h2>
+
+<!-- 掲示板   -->
+　　 <div class="under-wrapper">
+       <div class="mioshie">
+       <p>〜　今月のことば　〜</p>
+         <div class="mioshie-intro">
+           <p>教会では日常生活で大切にしたい教えを掲示板で紹介しています</p>
+           <p>ご感想がありましたら下記のコメント欄にご記載ください</p>
+           <p>"今月のことば" について詳しく聞きたい方</p>
+           <p>ほかのことばについて知りたい方はその旨をお知らせください</p>
+           <p>（どうぞお気軽に）</p>
+           <img src="media/picture/IMG_掲示板200519.jpg" alt="" width="600px" height="450px">
+         </div>
+
+
+
+         <p></p>
+         <p></p>
+
+         </div>
+       </div>
+　　 </div>
+
+
+<!-- 問い合わせ   -->
+
+    <div class="contact-form">
+      <h3 class="section-title">お問い合せ</h3>
+
+      <div class="item">
+        <label class="label">お名前：</label>
+        <input class="inputs" type="text" name="name" value="">
       </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
-        </div>
+      <div class="item">
+        <label class="label">メールアドレス：</label>
+        <input class="inputs" type="text" name="email" value="">
       </div>
+
+      <div class="item">
+        <label class="label">ご相談・ご感想：</label>
+        <textarea class="inputs"></textarea>
+      </div>
+      <div class="btn-area">
+        <input type="submit" value="送信" style="width: 30px; height: 30px">
+      </div>
+    </div>
+
+<!-- 住所   -->
+
+    <footer>
       <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
-</body>
+        <div class="footer">
+          <div class="konkokyo-himeji">
+            <p>金光教姫路教会</p>
+            <p>〒670-0011　兵庫県姫路市坊主町34番地　TEL:079-223-8783</p>
+          </div>
+          <div class="konkokyo-honbu">
+            <p>金光教について詳しく知りたい方は以下のリンクをご参照ください</p>
+            <a href="http://web-konkokyo.info/konkokyo/info/index_html">金光教本部教庁</a>
+          </div>
+        </div>
+    </footer>
+  </body>
 </html>
