--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 <!-- 住所   -->
 
     <footer>
-      <div class="clear"></div>
-        <div class="footer">
+      <div class="info">
           <div class="konkokyo-himeji">
             <p>金光教姫路教会</p>
             <p>〒670-0011　兵庫県姫路市坊主町34番地　TEL:079-223-8783</p>
@@ -126,7 +125,7 @@
             <p>金光教について詳しく知りたい方は以下のリンクをご参照ください</p>
             <a href="http://web-konkokyo.info/konkokyo/info/index_html">金光教本部教庁</a>
           </div>
-        </div>
+      </div>
     </footer>
   </body>
 </html>
