--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="header-title">金光教姫路教会</div>
-        <div class="header-subtitle">〜Konkokyo church of Himeji〜</div>
+        <div class="header-subtitle">〜ひめじの”こんこう”さん〜</div>
 
       </div>
 
@@ -73,21 +73,19 @@
 <!-- 掲示板   -->
 　　 <div class="under-wrapper">
        <div class="mioshie">
-       <p>〜　今月のことば　〜</p>
+       <p>〜　”こんこうさん”の掲示板　〜</p>
          <div class="mioshie-intro">
            <p>教会では日常生活で大切にしたい教えを掲示板で紹介しています</p>
            <p>ご感想がありましたら下記のコメント欄にご記載ください</p>
-           <p>"今月のことば" について詳しく聞きたい方</p>
-           <p>ほかのことばについて知りたい方はその旨をお知らせください</p>
-           <p>（どうぞお気軽に）</p>
+           <p></p>
+           <p>（お気軽にどうぞ）</p>
            <img src="media/picture/IMG_掲示板200519.jpg" alt="" width="600px" height="450px">
-         </div>
-
-
-
-         <p></p>
-         <p></p>
-
+           <img src="media/picture/IMG_教会長.JPG" alt="" width="600px" height="450px">
+      　 </div>
+         <div class="past-keijiban">
+           <p>過去に掲載した”こんこうさん”の掲示板について</p>
+           <p>１週間に一度，下記のURLでご紹介更新していきますので</p>
+           <p>ご覧ください</p>
          </div>
        </div>
 　　 </div>
@@ -112,7 +110,7 @@
         <textarea class="inputs"></textarea>
       </div>
       <div class="btn-area">
-        <input type="submit" value="送信" style="width: 30px; height: 30px">
+        <input type="submit" value="送信" style="width: 50px; height: 30px">
       </div>
     </div>
 
