--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>金光教姫路教会</title>
+    <title>金光教姫路教会 -ひめじの"こんこうさん" -</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css" title="" type="" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -16,8 +16,11 @@
           <img src="media/picture/金光教ロゴマーク.png" alt=""　width="65px" height="65px">
         </div>
 
-        <div class="header-title">金光教姫路教会</div>
-        <div class="header-subtitle">〜ひめじの”こんこう”さん〜</div>
+        <div class="header-title">
+          <h1>金光教姫路教会</h1>
+          <h2>- ひめじの"こんこう"さん -</h2>
+
+        </div>
 
       </div>
 
@@ -37,7 +40,7 @@
 
 <!-- 教会ってどんなとこ   -->
     <div class="middle-wrapper">
-      <p class="heading">教会ってどんなところ？</p>
+      <p class="heading">"こんこうさん"ってどんなところ？</p>
       <div class="whattodos">
         <div class="whattodo">
           <div class="whattodo-picture">
@@ -73,7 +76,7 @@
 <!-- 掲示板   -->
 　　 <div class="under-wrapper">
        <div class="mioshie">
-       <p>〜　”こんこうさん”の掲示板　〜</p>
+       <p>-　"こんこうさん"の掲示板　-</p>
          <div class="mioshie-intro">
            <p>教会では日常生活で大切にしたい教えを掲示板で紹介しています</p>
            <p>ご感想がありましたら下記のコメント欄にご記載ください</p>
@@ -83,7 +86,7 @@
            <img src="media/picture/IMG_教会長.JPG" alt="" width="600px" height="450px">
       　 </div>
          <div class="past-keijiban">
-           <p>過去に掲載した”こんこうさん”の掲示板について</p>
+           <p>過去に掲載した"こんこうさん"の掲示板について</p>
            <p>１週間に一度，下記のURLでご紹介更新していきますので</p>
            <p>ご覧ください</p>
          </div>
