--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="明治初期より「ひめじのこんこうさん」として親しまれてきました。
-    心を落ちつけたい時，ひとりになりたい時，悩んでいる時，どうぞご参拝ください。「こんこうさんの掲示板」は週に1回程度，更新します">
+    <meta name="Description" content="明治初期より，ひめじのこんこうさんとして親しまれてきました。
+    心を落ちつけたい時，ひとりになりたい時，悩んでいる時，どうぞご参拝ください。こんこうさんの掲示板は週に1回程度，更新します">
     <title>金光教姫路教会 -ひめじの"こんこうさん" -</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css" title="" type="" />
